# bwbots-beer-caddy

./: .dockerignore  .gitignore  .gitmodules  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.gpu-disable.yaml  docker-compose.gpu-enable.yaml  docker-compose.gpu.yaml  docker-compose.training.yaml  docker-compose.workstation.yaml  docker-compose.yaml  post_create.sh  setup_container.sh
config/: base.yaml  robot.yaml
docker/: get_project_name  image_version
docs/: docker_setup.md  local_setup.md  robot_setup.md  ros1_setup.md  simulation.md  simulator_setup.md  ssh_instructions.md
firmware/: platformio.ini  upload.sh
home_delivery_bot/: commandline.py  gpio_manager.py  tunnel_client.py
hotspot/: config.py  config.yaml  connect_to_network  connect_to_network.md  control_hotspot  create_hotspot  list_wifi_networks  main.py
install/: boot-config.txt  build_ws  delete_data  deploy  deploy.sh  docker_deploy.sh  exclude.txt  flash  flash.sh  requirements.txt  restart  restart.sh  sync_bags  sync_data  sync_time  upload  upload.sh
lib/: config.py  exceptions.py  logger_manager.py
matlab/: MultibodyBalanceBotSim.slx  RunRobotSim.m  SBR.slx
python/: main.py  remote_joystick.py  requirements.txt  run_remote_joystick.py  tail-latest.sh
ros1/bwbots/bw_waypoints/: CMakeLists.txt  package.xml  setup.py
ros1/bwbots/bw_waypoints/launch/: bw_waypoints.launch
ros1/bwbots/bw_waypoints/scripts/: save_robot_waypoint_script.py
ros1/bwbots/bw_waypoints/src/: bw_waypoints_node.py
ros1/bwbots/bw_waypoints/waypoints/: 3-101.yaml  field-2021-10-30-edited.yaml  simulated.yaml
ros2/: Dockerfile  build.sh  ros_entrypoint.sh  run.sh
ros2/bwbots/bw_description/: CMakeLists.txt  package.xml
ros2/bwbots/bw_description/include/: bw_description.h
ros2/bwbots/bw_description/launch/: bw_description.launch.py  imu_joint.launch.xml
ros2/bwbots/bw_description/src/: bw_description.cpp
scripts/: delete_data.sh  flash_bw_bcause  flash_load_cell  logs  prioritize_eth  prioritize_wifi  setup_teensy_udev_rules.sh  setup_zed_udev_rules.sh  start_desktop  startup.sh  (+1 more)
shortcuts/: login  (+9 more)
(+1211 files in other folders)
